--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
 FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 FIREBASE_APP_ID=your_app_id_here
 FIREBASE_MEASUREMENT_ID=your_measurement_id_here
+GEMINI_API_KEY=your_gemini_api_key_here
