--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@google/genai": "^1.4.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/material-top-tabs": "^7.2.14",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "53.0.11",
+    "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-dotenv": "^3.4.11",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-pager-view": "^6.8.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-tab-view": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
