--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.8.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-tab-view": "^4.1.1"
