--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.4.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-community/slider": "^4.5.7",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/material-top-tabs": "^7.2.14",
@@ -20,6 +21,7 @@
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-dotenv": "^3.4.11",
