--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@google/genai": "^1.4.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.1",
-    "@react-native-community/slider": "^4.5.7",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/material-top-tabs": "^7.2.14",
     "@react-navigation/native": "^7.1.9",
@@ -26,7 +26,7 @@
     "react-native": "0.79.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-pager-view": "^6.8.1",
+    "react-native-pager-view": "6.7.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-tab-view": "^4.1.1"
   },
