--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.8.1",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-tab-view": "^4.1.1"
+    "react-native-tab-view": "^4.1.1",
+    "react-native-webview": "^13.15.0",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
