--- a/package.json
+++ b/package.json
@@ -9,32 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^54.0.6",
+    "@expo/vector-icons": "^15.0.2",
     "@google/genai": "^1.4.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/material-top-tabs": "^7.2.14",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
-    "expo": "53.0.11",
+    "expo": "54.0.0",
+    "expo-asset": "^12.0.9",
+    "expo-dev-client": "~5.2.4",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "moment": "^2.30.1",
-    "react": "19.0.0",
-    "react-native": "0.79.3",
+    "react": "19.1.0",
+    "react-native": "0.81.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.7.1",
     "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.1.1",
-    "react-native-webview": "^13.15.0",
+    "react-native-webview": "13.13.5",
     "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.4",
+    "babel-preset-expo": "^54.0.4",
     "typescript": "~5.8.3"
   },
   "private": true
