--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "54.0.0",
+    "expo-application": "~7.0.7",
     "expo-asset": "^12.0.9",
-    "expo-dev-client": "~5.2.4",
+    "expo-auth-session": "~7.0.8",
+    "expo-constants": "~18.0.10",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~15.0.8",
     "firebase": "^11.8.1",
     "moment": "^2.30.1",
     "react": "19.1.0",
