--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.4",
     "babel-preset-expo": "^54.0.4",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3"
   },
   "private": true
