--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "expo-asset": "^12.0.9",
     "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
     "expo-image-picker": "^16.1.4",
+    "expo-notifications": "~0.32.13",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~15.0.8",
     "firebase": "^11.8.1",
@@ -36,10 +38,10 @@
     "react-native-pager-view": "6.7.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.1.1",
     "react-native-webview": "13.13.5",
-    "react-native-youtube-iframe": "^2.3.0",
-    "react-native-svg": "15.12.1"
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
