--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-application": "~7.0.7",
     "expo-asset": "^12.0.9",
     "expo-auth-session": "~7.0.8",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-device": "~8.0.9",
     "expo-image-picker": "^16.1.4",
@@ -41,7 +42,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.12.1",
     "react-native-tab-view": "^4.1.1",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "13.15.0",
     "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
