--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-device": "~8.0.9",
     "expo-image-picker": "^16.1.4",
     "expo-notifications": "~0.32.13",
+    "expo-speech": "~14.0.8",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~15.0.8",
     "firebase": "^11.8.1",
