--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-config": "^54.0.6",
     "@expo/vector-icons": "^15.0.2",
     "@google/genai": "^1.4.0",
+    "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/slider": "4.5.6",
@@ -20,6 +21,8 @@
     "@react-navigation/material-top-tabs": "^7.2.14",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "expo": "54.0.0",
     "expo-application": "~7.0.7",
     "expo-asset": "^12.0.9",
@@ -29,15 +32,20 @@
     "expo-device": "~8.0.9",
     "expo-image-picker": "^16.1.4",
     "expo-notifications": "~0.32.13",
+    "expo-secure-store": "~15.0.8",
     "expo-speech": "~14.0.8",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~15.0.8",
+    "express": "^5.2.1",
     "firebase": "^11.8.1",
     "moment": "^2.30.1",
+    "openai": "^6.14.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-pager-view": "6.7.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
