--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 FIREBASE_APP_ID=your_app_id_here
 FIREBASE_MEASUREMENT_ID=your_measurement_id_here
 GEMINI_API_KEY=your_gemini_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+SPOONACULAR_API_KEY=your_spoonacular_api_key_here
