--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~15.0.8",
     "firebase": "^11.8.1",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "openai": "^6.14.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
