--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ FIREBASE_MEASUREMENT_ID=your_measurement_id_here
 GEMINI_API_KEY=your_gemini_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
 SPOONACULAR_API_KEY=your_spoonacular_api_key_here
+POSETRACKER_API_KEY=your_posetracker_api_key_here
